--- a/kjøpsvilkår.html
+++ b/kjøpsvilkår.html
@@ -12,82 +12,82 @@
     </head>
     <body>
         <div id="grid-container-kjopsrett">
-        <header>
-            <nav>
-                <i class="fa-solid fa-bars" id="ham"></i>
-                <span id="LOGO">
-                    <a href="indexnr2.html" id="LOGO">Lilleputtsko</a>
-                </span>
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
-            </nav>
-        </header>
-        <main>
-            <nav>
-                <ul class="brodsti">
-                    <li><a href="#">Hjem/</a></li>
-                    <li><a href="#">Kjøpsvilkår</a></li>
-                </ul>
-            </nav>
-        <section>
-            <h2>Kjøpsvilkår</h2>
-            <article>
-                <h3>Kjøpsvilkår</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
-                    Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
-                    Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
-                    Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
-                    Donec ornare lectus at orci pretium dignissim. 
-                </p>
-            </article>
-            <article>
-                <h3>Levering</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
-                    Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
-                    Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
-                    Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
-                    Donec ornare lectus at orci pretium dignissim. 
-                </p>
-            </article>
-            <article>
-                <h3>Betaling</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
-                    Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
-                    Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
-                    Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
-                    Donec ornare lectus at orci pretium dignissim. 
-                </p>
-            </article>
-            <article>
-                <h3>Retur og Bytte</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
-                    Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
-                    Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
-                    Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
-                    Donec ornare lectus at orci pretium dignissim. 
-                </p>
-            </article>
-            <article>
-                <h3>Reklamasjon</h3>
-                <p>
-                    Lorem ipsum Duis consequat vitae purus eu consequat. Nunc leo lectus, 
-                    aliquet sed ligula gravida, gravida pellentesque felis. Cras hendrerit purus
-                    non consectetur viverra. Pellentesque vel ante non dui ullamcorper accumsan. 
-                    In ullamcorper rutrum ipsum id mollis. Pellentesque varius, neque eget pellentesque 
-                    auctor.
-                </p>
-            </article>
-        </section>
+                <header>
+                    <nav>
+                        <i class="fa-solid fa-bars" id="ham"></i>
+                        <span id="LOGO">
+                            <a href="indexnr2.html">Lilleputtsko</a>
+                        </span>
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </nav>
+                </header>
+                <main>
+                    <nav>
+                        <ul class="brodsti">
+                            <li><a href="#">Hjem/</a></li>
+                            <li><a href="#">Kjøpsvilkår</a></li>
+                        </ul>
+                    </nav>
+                <section>
+                    <h2>Kjøpsvilkår</h2>
+                    <article>
+                        <h3>Kjøpsvilkår</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
+                            Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
+                            Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
+                            Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
+                            Donec ornare lectus at orci pretium dignissim. 
+                        </p>
+                    </article>
+                    <article>
+                        <h3>Levering</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
+                            Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
+                            Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
+                            Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
+                            Donec ornare lectus at orci pretium dignissim. 
+                        </p>
+                    </article>
+                    <article>
+                        <h3>Betaling</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
+                            Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
+                            Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
+                            Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
+                            Donec ornare lectus at orci pretium dignissim. 
+                        </p>
+                    </article>
+                    <article>
+                    <h3>Retur og Bytte</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                            Ut risus neque, aliquet ut accumsan vel, facilisis eu ex. 
+                            Nunc erat turpis, molestie id tincidunt nec, placerat id ante. 
+                            Phasellus maximus purus nec eros varius, sed vestibulum quam feugiat.
+                            Proin pharetra maximus risus, sit amet pellentesque elit efficitur id. 
+                            Donec ornare lectus at orci pretium dignissim. 
+                        </p>
+                    </article>
+                    <article>
+                    <h3>Reklamasjon</h3>
+                        <p>
+                            Lorem ipsum Duis consequat vitae purus eu consequat. Nunc leo lectus, 
+                            aliquet sed ligula gravida, gravida pellentesque felis. Cras hendrerit purus
+                            non consectetur viverra. Pellentesque vel ante non dui ullamcorper accumsan. 
+                            In ullamcorper rutrum ipsum id mollis. Pellentesque varius, neque eget pellentesque 
+                            auctor.
+                        </p>
+                    </article>
+                </section>
+            </main>
         </div>
-        </main>
         <footer id="footer">
             <article id="kontaktoss">
                 <h2>LILLEPUTTSKO</h2>
