--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html lang="no">
     <head>
-        <meta name="viewport"content="width-device-width, initial-scale=1.0">
-        <meta charset="UTF=8">
-        <!--legg inn under-->
-        <link rel="stylesheet" href="#">
-        <title>legg inn tittel her for lilleputtsko</title>
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
+        <link href="css/font/css/fontawesome.css" rel="stylesheet">
+        <link href="css/font/css/brands.css" rel="stylesheet">
+        <link href="css/font/css/solid.css" rel="stylesheet">
+        <title>Lilleputtsko</title>
+        <script src="https://kit.fontawesome.com/2d6eaf2aa7.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header>
-            <nav>
-                <span>
-                    <a href="indexnr2.html">LOGO</a>
-                </span>
-            </nav>
-        </header>
-        <main>
-            <article id="medlemsknapp">
+        <div id="grid-container-index">
+            <header>
+                <nav>
+                    <i class="fa-solid fa-bars" id="ham"></i>
+                    <span id="LOGO">
+                        <a href="indexnr2.html">Lilleputtsko</a>
+                    </span>
+                    <section class="flex-container-logo" >
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </section>
+                </nav>
+                    <ul class="navbar">
+                        <li><a href="produkt.html">Sommersko</a></li>
+                        <li><a href="produkt.html">Vintersko</a></li>
+                        <li><a href="produkt.html">Pensko</a></li>
+                        <li><a href="produkt.html">Boots</a></li>
+                        <li><a href="produkt.html">Regnstøvler</a></li>
+                        <li><a href="produkt.html">Joggesko</a></li>
+                    </ul>
+            </header>
+            <main>
+                <section>
+                    <a href="produkt.html" class="knapp">Jente</a>
+                    <a href="produkt.html" class="knapp">Gutt</a>
+                </section>
+                    <article class="img">
+                        <img src="img/tilbud-bilde-sko.jpg" alt="tilbud sko, moderne, fargerike barnesko">
+                    </article>
+                <section>
+                    <a href="produkt.html" class="skotype">Gummistøvler</a>
+                    <a href="produkt.html" class="skotype">Vintersko</a>
+                    <a href="produkt.html" class="skotype">Sommersko</a>
+                    <a href="produkt.html" class="skotype">Joggesko</a>
+                </section>
+                <section>
+                    <article class="img">
+                        <img src="img/nyheter-bilde-sko.jpg" alt="nyheter sko, disse nye skoene tilbyr vi i vår nettbutikk. moderne, faregerike barnesko">
+                    </article>
+                </section>
+                <article id="medlemsknapp">
                     <h2>Bli medlem her</h2>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -26,25 +61,38 @@
                             rhoncus nec. Cras eu purus interdum, vehicula dui ac, sodales 
                             arcu. Donec efficitur vulputate dui eget imperdiet. Nullam
                             finibus maximus ultricies
-                         </p>
-            </article>
-            <ul>
-                <li><a href="#">Jente</a></li>
-                <li><a href="#">Gutt</a></li>
-            </ul>
-            <ul>
-                <li><a href="#">Sommersko</a></li>
-                <li><a href="#">Vintersko</a></li>
-                <li><a href="#">Joggesko</a></li>
-                <li><a href="#">Gummistøvler</a></li>
-            </ul>
-            <!--legg inn ting som article, section osv -->
-        </main>
-        <footer>
-            <nav>
-                <!--legg inn den svarte boksen på bånn-->
-                <!--legg inn ikoner-->
-            </nav>
-        </footer>
-    </body>
+                        </p>
+                </article>
+            </main>
+            </div>
+            <footer id="footer">
+                    <article id="kontaktoss">
+                        <h2>LILLEPUTTSKO</h2>
+                        <h3>Kundeservice</h3>
+                        <ul class="footer">
+                            <li><a href="#">KUNDEKLUBB</a></li>
+                            <li><a href="#">KUNDESERVICE</a></li>
+                            <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
+                            <li><a href="#">KONTAKT OSS</a></li>
+                        </ul>
+                    </article>
+                    <article id="vare-produkter">
+                        <h3>Våre produkter</h3>
+                        <ul class="footer">
+                            <li><a href="#">Sommersko</a></li>
+                            <li><a href="#">Vintersko</a></li>
+                            <li><a href="#">Pensko</a></li>
+                            <li><a href="#">Boots</a></li>
+                            <li><a href="#">Regnstøvler</a></li>
+                            <li><a href="#">Joggesko</a></li>
+                        </ul>
+                    </article>
+                    <article id="sosiale-medier">
+                        <h4 id="sosialemedier">Sjekk ut våre sosiale medier</h4>
+                            <i class="fa-brands fa-square-facebook ikoner"></i>
+                            <i class="fa-brands fa-instagram ikoner"></i>
+                            <i class="fa-brands fa-snapchat ikoner"></i>
+                    </article>
+            </footer>
+        </body>
 </html>
