--- a/produkt.html
+++ b/produkt.html
@@ -16,7 +16,7 @@
                 <nav>
                     <i class="fa-solid fa-bars" id="ham"></i>
                     <span id="LOGO">
-                        <a href="indexnr2.html" id="LOGO">Lilleputtsko</a>
+                        <a href="indexnr2.html">Lilleputtsko</a>
                     </span>
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <i class="fa-solid fa-cart-shopping"></i>
