--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
                 <nav>
                     <i class="fa-solid fa-bars" id="ham"></i>
                     <span id="LOGO">
-                        <a href="indexnr2.html">Lilleputtsko</a>
+                        <a href="index.html" id="logofarge">Lilleputtsko</a>
                     </span>
-                    <section class="flex-container-logo" >
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <i class="fa-solid fa-cart-shopping"></i>
-                    </section>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </nav>
                 </nav>
                     <ul class="navbar">
                         <li><a href="produkt.html">Sommersko</a></li>
