--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <h3>Kundeservice</h3>
                         <ul class="footer">
                             <li><a href="#">KUNDEKLUBB</a></li>
-                            <li><a href="#">KUNDESERVICE</a></li>
+                            <li><a href="kjøpsvilkår.html">KUNDESERVICE</a></li>
                             <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
                             <li><a href="#">KONTAKT OSS</a></li>
                         </ul>
@@ -78,12 +78,12 @@
                     <article id="vare-produkter">
                         <h3>Våre produkter</h3>
                         <ul class="footer">
-                            <li><a href="#">Sommersko</a></li>
-                            <li><a href="#">Vintersko</a></li>
-                            <li><a href="#">Pensko</a></li>
-                            <li><a href="#">Boots</a></li>
-                            <li><a href="#">Regnstøvler</a></li>
-                            <li><a href="#">Joggesko</a></li>
+                            <li><a href="produkt.html">Sommersko</a></li>
+                            <li><a href="produkt.html">Vintersko</a></li>
+                            <li><a href="produkt.html">Pensko</a></li>
+                            <li><a href="produkt.html">Boots</a></li>
+                            <li><a href="produkt.html">Regnstøvler</a></li>
+                            <li><a href="produkt.html">Joggesko</a></li>
                         </ul>
                     </article>
                     <article id="sosiale-medier">
