--- a/kjøpsvilkår.html
+++ b/kjøpsvilkår.html
@@ -25,7 +25,7 @@
                 <main>
                     <nav>
                         <ul class="brodsti">
-                            <li><a href="#">Hjem/</a></li>
+                            <li><a href="index.html">Hjem/</a></li>
                             <li><a href="#">Kjøpsvilkår</a></li>
                         </ul>
                     </nav>
@@ -94,7 +94,7 @@
                 <h3>Kundeservice</h3>
                 <ul class="footer">
                     <li><a href="#">KUNDEKLUBB</a></li>
-                    <li><a href="#">KUNDESERVICE</a></li>
+                    <li><a href="kjøpsvilkår.html">KUNDESERVICE</a></li>
                     <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
                     <li><a href="#">KONTAKT OSS</a></li>
                 </ul>
@@ -102,12 +102,12 @@
             <article id="vare-produkter">
                 <h3>Våre produkter</h3>
                 <ul class="footer">
-                    <li><a href="#">Sommersko</a></li>
-                    <li><a href="#">Vintersko</a></li>
-                    <li><a href="#">Pensko</a></li>
-                    <li><a href="#">Boots</a></li>
-                    <li><a href="#">Regnstøvler</a></li>
-                    <li><a href="#">Joggesko</a></li>
+                    <li><a href="produkt.html">Sommersko</a></li>
+                    <li><a href="produkt.html">Vintersko</a></li>
+                    <li><a href="produkt.html">Pensko</a></li>
+                    <li><a href="produkt.html">Boots</a></li>
+                    <li><a href="produkt.html">Regnstøvler</a></li>
+                    <li><a href="produkt.html">Joggesko</a></li>
                 </ul>
             </article>
             <article id="sosiale-medier">
