--- a/produkt.html
+++ b/produkt.html
@@ -25,7 +25,7 @@
             <main>
             <nav>
                 <ul class="brodsti">
-                    <li><a href="#">Hjem/</a></li>
+                    <li><a href="index.html">Hjem/</a></li>
                     <li><a href="#">Barn/</a></li>
                     <li><a href="#">Alle barnesko/</a></li>
                     <li><a href="#">Inextenso softwear</a></li>
@@ -44,9 +44,9 @@
             </section>
             <section>
                 <h3>Inextenso</h3>
-                <p id="skonavn">softwearsko</p>
-                <p id="pris">299</p>
-                <p id="skofarge">farger</p>
+                <p id="skonavn">SOFTWEARSKO</p>
+                <p id="pris">299 kr</p>
+                <p id="skofarge">Farger</p>
                 <p id="blue-sko" class="skofarge">Blå</p>
                 <p id="red-sko" class="skofarge">Rød</p>
                 <p id="gren-sko" class="skofarge">Grønn</p>
@@ -80,7 +80,7 @@
                 <h3>Kundeservice</h3>
                 <ul class="footer">
                     <li><a href="#">KUNDEKLUBB</a></li>
-                    <li><a href="#">KUNDESERVICE</a></li>
+                    <li><a href="kjøpsvilkår.html">KUNDESERVICE</a></li>
                     <li><a href="kjøpsvilkår.html">KJØPSVILKÅR</a></li>
                     <li><a href="#">KONTAKT OSS</a></li>
                 </ul>
@@ -88,12 +88,12 @@
             <article id="vare-produkter">
                 <h3>Våre produkter</h3>
                 <ul class="footer">
-                    <li><a href="#">Sommersko</a></li>
-                    <li><a href="#">Vintersko</a></li>
-                    <li><a href="#">Pensko</a></li>
-                    <li><a href="#">Boots</a></li>
-                    <li><a href="#">Regnstøvler</a></li>
-                    <li><a href="#">Joggesko</a></li>
+                    <li><a href="produkt.html">Sommersko</a></li>
+                    <li><a href="produkt.html">Vintersko</a></li>
+                    <li><a href="produkt.html">Pensko</a></li>
+                    <li><a href="produkt.html">Boots</a></li>
+                    <li><a href="produkt.html">Regnstøvler</a></li>
+                    <li><a href="produkt.html">Joggesko</a></li>
                 </ul>
             </article>
             <article id="sosiale-medier">
@@ -103,7 +103,6 @@
                     <i class="fa-brands fa-snapchat ikoner"></i>
             </article>
         </footer>
-      
     </body>
 </html>
 
