--- a/produkthjelp.html
+++ b/produkthjelp.html
@@ -32,9 +32,6 @@
                 </ul>
             </nav>
             <section>
-               
-            </section>
-            <section id="lilleputtsko-produktside">
                 <article class="produktimg">
                     <img src="img/sko-begge.jpg" alt="inextenso softwear sko, lilla og svarte sko med borrelås og elastisk snøring">
                 </article>
@@ -44,7 +41,8 @@
                     <img src="img/sko-siden.jpg" alt="skoen vises fra siden">
                     <img src="img/sko-bak.jpg" alt="skoen vises fra baksiden">
                 </article>
-                <div id="div-id">
+            </section>
+            <section">
                     <h3>Inextenso</h3>
                     <p id="skonavn">SOFTWEARSKO</p>
                     <p id="pris">299 kr</p>
@@ -65,7 +63,6 @@
                         <p class="størrelser">36</p>
                         <p class="størrelser">37</p>
                     <a href="#" id="kjopeknapp">Legg til i handlekurv</a>
-                </div>
                 <h6 id="produktbeskrivelse">Produktbeskrivelse</h6>
                 <p id="produkt">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed neque 
