--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="no">
+    <!--flere deler av koden er inspirert av forelesning med Ann-Charlott Karlsen og boken "html og css" av Jon Duckett-->
     <head>
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta charset="UTF-8">
@@ -37,6 +38,7 @@
                     <a href="produkt.html" class="knapp">Gutt</a>
                 </section>
                     <article class="img">
+                        <!--bilder er hentet fra Leonard.ai, shoes for kids-->
                         <img src="img/tilbud-bilde-sko.jpg" alt="tilbud sko, moderne, fargerike barnesko">
                     </article>
                 <section>
@@ -47,6 +49,7 @@
                 </section>
                 <section>
                     <article class="img">
+                        <!--bilder er hentet fra Leonard.ai, shoes for kids-->
                         <img src="img/nyheter-bilde-sko.jpg" alt="nyheter sko, disse nye skoene tilbyr vi i vår nettbutikk. moderne, faregerike barnesko">
                     </article>
                 </section>
