--- a/produkthjelp.html
+++ b/produkthjelp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="no">
+        <!--flere deler av koden er inspirert av forelesning med Ann-Charlott Karlsen og boken "html og css" av Jon Duckett-->
     <head>
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta charset="UTF-8">
@@ -42,7 +43,7 @@
                     <img src="img/sko-bak.jpg" alt="skoen vises fra baksiden">
                 </article>
             </section>
-            <section">
+            <section>
                     <h3>Inextenso</h3>
                     <p id="skonavn">SOFTWEARSKO</p>
                     <p id="pris">299 kr</p>
@@ -57,11 +58,13 @@
                         <p class="størrelser">30</p>
                         <p class="størrelser">31</p>
                         <p class="størrelser">32</p>
+                        <br>
                         <p class="størrelser">33</p>
                         <p class="størrelser">34</p>
                         <p class="størrelser">35</p>
                         <p class="størrelser">36</p>
                         <p class="størrelser">37</p>
+                    </div>
                     <a href="#" id="kjopeknapp">Legg til i handlekurv</a>
                 <h6 id="produktbeskrivelse">Produktbeskrivelse</h6>
                 <p id="produkt">
