--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
     <!--flere deler av koden er inspirert av forelesning med Ann-Charlott Karlsen og boken "html og css" av Jon Duckett-->
+    <!--sjekking av nettside, cowboykode og justeringer av nettsiden er gjort i firefox-->
     <head>
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta charset="UTF-8">
