--- a/produkthjelp.html
+++ b/produkthjelp.html
@@ -24,7 +24,7 @@
                     <i class="fa-solid fa-cart-shopping"></i>
                 </nav>
             </header>
-            <main>
+            <main id="produkt-main">
             <nav>
                 <ul class="brodsti">
                     <li><a href="index.html">Hjem/</a></li>
@@ -33,7 +33,7 @@
                     <li><a href="#">Inextenso softwear</a></li>
                 </ul>
             </nav>
-            <section>
+            <section id="produkt-bilde">
                 <article class="produktimg">
                     <img src="img/sko-begge.jpg" alt="inextenso softwear sko, lilla og svarte sko med borrelås og elastisk snøring">
                 </article>
@@ -44,7 +44,7 @@
                     <img src="img/sko-bak.jpg" alt="skoen vises fra baksiden">
                 </article>
             </section>
-            <section>
+            <section id="produkt-info">
                     <h3>Inextenso</h3>
                     <p id="skonavn">SOFTWEARSKO</p>
                     <p id="pris">299 kr</p>
