farger og kommentarer

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
     <!--flere deler av koden er inspirert av forelesning med Ann-Charlott Karlsen og boken "html og css" av Jon Duckett-->
-    <!--sjekking av nettside, cowboykode og justeringer av nettsiden er gjort i firefox-->
+    <!--sjekking av nettside, cowboykode og justeringer av nettsiden underveis er gjort i firefox-->
     <head>
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta charset="UTF-8">
@@ -22,7 +22,6 @@
                     </span>
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <i class="fa-solid fa-cart-shopping"></i>
-                </nav>
                 </nav>
                     <ul class="navbar">
                         <li><a href="produkt.html">Sommersko</a></li>
@@ -97,5 +96,5 @@
                             <i class="fa-brands fa-snapchat ikoner"></i>
                     </article>
             </footer>
-        </body>
+    </body>
 </html>
