--- a/produkthjelp.html
+++ b/produkthjelp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
         <!--flere deler av koden er inspirert av forelesning med Ann-Charlott Karlsen og boken "html og css" av Jon Duckett-->
-         <!--sjekking av nettside, cowboykode og justeringer av nettsiden er gjort i firefox-->
+         <!--sjekking av nettside, cowboykode og justeringer av nettsiden underveis er gjort i firefox-->
     <head>
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <meta charset="UTF-8">
@@ -35,9 +35,11 @@
             </nav>
             <section id="produkt-bilde">
                 <article class="produktimg">
+                             <!--bilder er tatt selv-->
                     <img src="img/sko-begge.jpg" alt="inextenso softwear sko, lilla og svarte sko med borrelås og elastisk snøring">
                 </article>
                 <article id="produktimg">
+                    <!--bilder er tatt selv-->
                     <img src="img/sko-begge.jpg" alt="begge skoene vises">
                     <img src="img/sko-foran.jpg" alt="skoen vises foran">
                     <img src="img/sko-siden.jpg" alt="skoen vises fra siden">
